Starting the correlation dataset

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -553,86 +553,82 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                V1        V2        V3        V4        V5        V6  \\\n",
-       "Time                                                                   \n",
-       "33419.0  -2.178201 -3.132187  1.315758 -0.129783 -2.736013  0.743459   \n",
-       "151317.0  2.064423  0.185575 -1.684612  0.411066  0.479555 -0.797963   \n",
-       "132434.0 -0.547505  0.798072 -0.719939 -1.129561  0.925708  0.763338   \n",
-       "81787.0  -0.945710  0.323579  0.595681 -1.288095  0.818906 -0.748491   \n",
-       "125062.0  1.898722 -0.321038 -1.771837  0.672408  0.115019 -1.267347   \n",
-       "...            ...       ...       ...       ...       ...       ...   \n",
-       "140177.0  2.164466 -1.721358  0.118546 -1.363516 -2.147961 -0.486731   \n",
-       "71541.0   1.070134  0.181228  0.670405  1.351215 -0.617646 -1.019820   \n",
-       "128249.0  2.111207 -0.687175 -1.637544 -1.931276 -0.244434 -1.065946   \n",
-       "123408.0  1.893443  0.551151 -1.145498  3.889379  0.570851 -0.580469   \n",
-       "160168.0 -6.067452  4.891426 -2.405573 -0.357747 -2.208001  2.946289   \n",
-       "\n",
-       "                V7         V8        V9       V10  ...       V21       V22  \\\n",
-       "Time                                               ...                       \n",
-       "33419.0  -0.752718  -2.650826 -0.184284 -1.392226  ... -0.828762 -0.219136   \n",
-       "151317.0  0.205544  -0.240568  0.415454 -0.401418  ... -0.351331 -0.876025   \n",
-       "132434.0  0.231338   0.799204 -0.277812 -0.348452  ...  0.366664  1.068933   \n",
-       "81787.0   0.890076  -0.130671 -0.471365 -0.389743  ... -0.371528 -1.149510   \n",
-       "125062.0  0.612810  -0.441070  0.450298  0.107004  ...  0.015111  0.006269   \n",
-       "...            ...        ...       ...       ...  ...       ...       ...   \n",
-       "140177.0 -1.755439  -0.023992 -0.563216  1.457773  ... -0.123266  0.138772   \n",
-       "71541.0   0.203157  -0.194571 -0.043719 -0.006449  ... -0.260380 -0.931052   \n",
-       "128249.0 -0.062955  -0.269111  2.439795 -1.334028  ...  0.115593  0.742015   \n",
-       "123408.0  0.635586  -0.266040 -1.032785  1.478749  ... -0.009592 -0.038580   \n",
-       "160168.0 -7.743597 -14.272909 -0.509250 -2.603412  ... -7.216839  3.488780   \n",
-       "\n",
-       "               V23       V24       V25       V26       V27       V28  Amount  \\\n",
-       "Time                                                                           \n",
-       "33419.0  -1.004913  0.788588  1.061994 -0.319407 -0.132313  0.333476  937.75   \n",
-       "151317.0  0.343288  0.522189 -0.259568  0.173623 -0.056280 -0.029665    1.98   \n",
-       "132434.0 -0.101523 -1.604148 -0.318277  0.838076  0.012324 -0.015564   11.95   \n",
-       "81787.0   0.217859 -0.507989 -0.026857  0.591496 -0.326179 -0.007543   24.98   \n",
-       "125062.0 -0.029094 -0.071333  0.179444  0.378225 -0.106042 -0.059506  104.36   \n",
-       "...            ...       ...       ...       ...       ...       ...     ...   \n",
-       "140177.0  0.319598  0.018634 -0.560967 -0.251774  0.060706 -0.023599   48.00   \n",
-       "71541.0   0.149692  0.647047  0.204529 -0.739666  0.012326  0.046917   70.00   \n",
-       "128249.0 -0.011124  0.731225  0.455436 -0.671152  0.039939 -0.051133    7.99   \n",
-       "123408.0  0.078061  0.007246  0.183011  0.016792 -0.072975 -0.056060   37.92   \n",
-       "160168.0  1.320159  0.598303 -0.308065 -0.261913 -0.260125  0.623409   15.25   \n",
-       "\n",
-       "          Class  \n",
-       "Time             \n",
-       "33419.0       0  \n",
-       "151317.0      0  \n",
-       "132434.0      0  \n",
-       "81787.0       0  \n",
-       "125062.0      0  \n",
-       "...         ...  \n",
-       "140177.0      0  \n",
-       "71541.0       0  \n",
-       "128249.0      0  \n",
-       "123408.0      0  \n",
-       "160168.0      0  \n",
-       "\n",
-       "[199364 rows x 30 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>V1</th>\n      <th>V2</th>\n      <th>V3</th>\n      <th>V4</th>\n      <th>V5</th>\n      <th>V6</th>\n      <th>V7</th>\n      <th>V8</th>\n      <th>V9</th>\n      <th>V10</th>\n      <th>...</th>\n      <th>V21</th>\n      <th>V22</th>\n      <th>V23</th>\n      <th>V24</th>\n      <th>V25</th>\n      <th>V26</th>\n      <th>V27</th>\n      <th>V28</th>\n      <th>Amount</th>\n      <th>Class</th>\n    </tr>\n    <tr>\n      <th>Time</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>33419.0</th>\n      <td>-2.178201</td>\n      <td>-3.132187</td>\n      <td>1.315758</td>\n      <td>-0.129783</td>\n      <td>-2.736013</td>\n      <td>0.743459</td>\n      <td>-0.752718</td>\n      <td>-2.650826</td>\n      <td>-0.184284</td>\n      <td>-1.392226</td>\n      <td>...</td>\n      <td>-0.828762</td>\n      <td>-0.219136</td>\n      <td>-1.004913</td>\n      <td>0.788588</td>\n      <td>1.061994</td>\n      <td>-0.319407</td>\n      <td>-0.132313</td>\n      <td>0.333476</td>\n      <td>937.75</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>151317.0</th>\n      <td>2.064423</td>\n      <td>0.185575</td>\n      <td>-1.684612</td>\n      <td>0.411066</td>\n      <td>0.479555</td>\n      <td>-0.797963</td>\n      <td>0.205544</td>\n      <td>-0.240568</td>\n      <td>0.415454</td>\n      <td>-0.401418</td>\n      <td>...</td>\n      <td>-0.351331</td>\n      <td>-0.876025</td>\n      <td>0.343288</td>\n      <td>0.522189</td>\n      <td>-0.259568</td>\n      <td>0.173623</td>\n      <td>-0.056280</td>\n      <td>-0.029665</td>\n      <td>1.98</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>132434.0</th>\n      <td>-0.547505</td>\n      <td>0.798072</td>\n      <td>-0.719939</td>\n      <td>-1.129561</td>\n      <td>0.925708</td>\n      <td>0.763338</td>\n      <td>0.231338</td>\n      <td>0.799204</td>\n      <td>-0.277812</td>\n      <td>-0.348452</td>\n      <td>...</td>\n      <td>0.366664</td>\n      <td>1.068933</td>\n      <td>-0.101523</td>\n      <td>-1.604148</td>\n      <td>-0.318277</td>\n      <td>0.838076</td>\n      <td>0.012324</td>\n      <td>-0.015564</td>\n      <td>11.95</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>81787.0</th>\n      <td>-0.945710</td>\n      <td>0.323579</td>\n      <td>0.595681</td>\n      <td>-1.288095</td>\n      <td>0.818906</td>\n      <td>-0.748491</td>\n      <td>0.890076</td>\n      <td>-0.130671</td>\n      <td>-0.471365</td>\n      <td>-0.389743</td>\n      <td>...</td>\n      <td>-0.371528</td>\n      <td>-1.149510</td>\n      <td>0.217859</td>\n      <td>-0.507989</td>\n      <td>-0.026857</td>\n      <td>0.591496</td>\n      <td>-0.326179</td>\n      <td>-0.007543</td>\n      <td>24.98</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>125062.0</th>\n      <td>1.898722</td>\n      <td>-0.321038</td>\n      <td>-1.771837</td>\n      <td>0.672408</td>\n      <td>0.115019</td>\n      <td>-1.267347</td>\n      <td>0.612810</td>\n      <td>-0.441070</td>\n      <td>0.450298</td>\n      <td>0.107004</td>\n      <td>...</td>\n      <td>0.015111</td>\n      <td>0.006269</td>\n      <td>-0.029094</td>\n      <td>-0.071333</td>\n      <td>0.179444</td>\n      <td>0.378225</td>\n      <td>-0.106042</td>\n      <td>-0.059506</td>\n      <td>104.36</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>140177.0</th>\n      <td>2.164466</td>\n      <td>-1.721358</td>\n      <td>0.118546</td>\n      <td>-1.363516</td>\n      <td>-2.147961</td>\n      <td>-0.486731</td>\n      <td>-1.755439</td>\n      <td>-0.023992</td>\n      <td>-0.563216</td>\n      <td>1.457773</td>\n      <td>...</td>\n      <td>-0.123266</td>\n      <td>0.138772</td>\n      <td>0.319598</td>\n      <td>0.018634</td>\n      <td>-0.560967</td>\n      <td>-0.251774</td>\n      <td>0.060706</td>\n      <td>-0.023599</td>\n      <td>48.00</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>71541.0</th>\n      <td>1.070134</td>\n      <td>0.181228</td>\n      <td>0.670405</td>\n      <td>1.351215</td>\n      <td>-0.617646</td>\n      <td>-1.019820</td>\n      <td>0.203157</td>\n      <td>-0.194571</td>\n      <td>-0.043719</td>\n      <td>-0.006449</td>\n      <td>...</td>\n      <td>-0.260380</td>\n      <td>-0.931052</td>\n      <td>0.149692</td>\n      <td>0.647047</td>\n      <td>0.204529</td>\n      <td>-0.739666</td>\n      <td>0.012326</td>\n      <td>0.046917</td>\n      <td>70.00</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>128249.0</th>\n      <td>2.111207</td>\n      <td>-0.687175</td>\n      <td>-1.637544</td>\n      <td>-1.931276</td>\n      <td>-0.244434</td>\n      <td>-1.065946</td>\n      <td>-0.062955</td>\n      <td>-0.269111</td>\n      <td>2.439795</td>\n      <td>-1.334028</td>\n      <td>...</td>\n      <td>0.115593</td>\n      <td>0.742015</td>\n      <td>-0.011124</td>\n      <td>0.731225</td>\n      <td>0.455436</td>\n      <td>-0.671152</td>\n      <td>0.039939</td>\n      <td>-0.051133</td>\n      <td>7.99</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>123408.0</th>\n      <td>1.893443</td>\n      <td>0.551151</td>\n      <td>-1.145498</td>\n      <td>3.889379</td>\n      <td>0.570851</td>\n      <td>-0.580469</td>\n      <td>0.635586</td>\n      <td>-0.266040</td>\n      <td>-1.032785</td>\n      <td>1.478749</td>\n      <td>...</td>\n      <td>-0.009592</td>\n      <td>-0.038580</td>\n      <td>0.078061</td>\n      <td>0.007246</td>\n      <td>0.183011</td>\n      <td>0.016792</td>\n      <td>-0.072975</td>\n      <td>-0.056060</td>\n      <td>37.92</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>160168.0</th>\n      <td>-6.067452</td>\n      <td>4.891426</td>\n      <td>-2.405573</td>\n      <td>-0.357747</td>\n      <td>-2.208001</td>\n      <td>2.946289</td>\n      <td>-7.743597</td>\n      <td>-14.272909</td>\n      <td>-0.509250</td>\n      <td>-2.603412</td>\n      <td>...</td>\n      <td>-7.216839</td>\n      <td>3.488780</td>\n      <td>1.320159</td>\n      <td>0.598303</td>\n      <td>-0.308065</td>\n      <td>-0.261913</td>\n      <td>-0.260125</td>\n      <td>0.623409</td>\n      <td>15.25</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>199364 rows × 30 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
+   "source": [
+    "## Datset Corelation\n",
+    "\n",
+    "Exploring the dataset correlation\n"
    ],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# list of all the columns minus the \"Class\"\n",
+    "columns = cc_test_df.columns.tolist()\n",
+    "columns_to_remove = [\"Class\"]\n",
+    "\n",
+    "## Remove a list from another list\n",
+    "columns = [var for var in columns if var not in columns_to_remove]\n",
+    "columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the data from the training set\n",
+    "\n",
+    "rows = (len(columns) // 2)\n",
+    "cols = 2\n",
+    "subplot_titles = tuple(var + \" vs Fraud detection\" for var in columns)\n",
+    "fig = make_subplots(rows=rows, cols=cols, subplot_titles=subplot_titles)\n",
+    "\n",
+    "for i, cat in enumerate(columns):\n",
+    "    row = (i // cols) + 1\n",
+    "    col = (i % cols) + 1\n",
+    "    \n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=cc_train_df[cat], y=cc_train_df[\"Class\"], mode=\"markers\"\n",
+    "    ), row=row, col=col)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "fig.update_layout(height=4000, title=\"Scatter plots of feature vs Fraud detection\", showlegend=False)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the data from the test data set\n",
+    "\n",
+    "rows = (len(columns) // 2)\n",
+    "cols = 2\n",
+    "subplot_titles = tuple(var + \" vs Fraud detection\" for var in columns)\n",
+    "fig = make_subplots(rows=rows, cols=cols, subplot_titles=subplot_titles)\n",
+    "\n",
+    "for i, cat in enumerate(columns):\n",
+    "    row = (i // cols) + 1\n",
+    "    col = (i % cols) + 1\n",
+    "    \n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=cc_test_df[cat], y=cc_test_df[\"Class\"], mode=\"markers\"\n",
+    "    ), row=row, col=col)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "fig.update_layout(height=4000, title=\"Scatter plots of feature vs Fraud detection\", showlegend=False)\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
