--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -19,7 +19,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import missingno as msno"
+    "import missingno as msno\n",
+    "from plotly.subplots import make_subplots\n",
+    "import plotly.graph_objects as go"
    ]
   },
   {
