Deleted the outliers and created the correlation heat map

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -1036,6 +1036,59 @@
         "\n",
         "Outliers greater than 6000"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "De5Ndz__nysV"
+      },
+      "source": [
+        "## Remove the outliers\n",
+        "vars_with_outliers_threshold_high = [(\"V4\", 15), (\"V5\", 40), (\"V6\", 25), (\"V7\", 60), (\"V9\", 15), (\"V10\", 20), (\"V13\", 6), (\"V15\", 6), (\"V16\", 10), (\"V20\", 27), (\"V21\", 20), (\"V22\", 10), (\"V24\", 25), (\"V27\", 13), (\"V28\", 20), (\"Amount\", 6000)]\n",
+        "vars_with_outliers_threshold_low = [(\"V1\", -40), (\"V2\", -40), (\"V3\", -35), (\"V5\", -40), (\"V19\", -6), (\"V20\", -40), (\"V21\", -20), (\"V22\", -10), (\"V23\", -40), (\"V25\", -10), (\"V26\", -2), (\"V27\", -10), (\"V28\", -10)]\n",
+        "\n",
+        "for var_name, threshold in vars_with_outliers_threshold_high:\n",
+        "    cc_train_df = cc_train_df[cc_train_df[var_name] < threshold]\n",
+        "    \n",
+        "cc_train_df\n",
+        "\n",
+        "for var_name, threshold in vars_with_outliers_threshold_low:\n",
+        "    cc_train_df = cc_train_df[cc_train_df[var_name] > threshold]\n",
+        "    \n",
+        "cc_train_df"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SNoCRhh-q-qa"
+      },
+      "source": [
+        "# Heatmap of the data correlation of training set\n",
+        "\n",
+        "fig = px.imshow(cc_train_df.corr(), title=\"Correlation heatmap of the features from the training set\")\n",
+        "fig.update_layout(height=800)\n",
+        "fig.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kfci-QTvrVwr"
+      },
+      "source": [
+        "# Heatmap of the data correlation of testing set\n",
+        "\n",
+        "fig = px.imshow(cc_test_df.corr(), title=\"Correlation heatmap of the features from the testing set\")\n",
+        "fig.update_layout(height=800)\n",
+        "fig.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
