Saved the dataset with pickle into google drive

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -42,9 +42,10 @@
         "import statsmodels.api as sm\n",
         "import statsmodels.stats.api as sms\n",
         "from scipy import stats\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "import pickle"
       ],
-      "execution_count": 24,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -3727,8 +3728,39 @@
         "id": "xpEQrVCisVdq"
       },
       "source": [
-        "The pruning of the feature has improvel slightly the pseudo r square and now all the feature columns have the P value small as required."
+        "The pruning of the feature has improvel slightly the pseudo r square and now all the feature columns have the P value smaller than 0.05 as required."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nr23w8imz4Yo"
+      },
+      "source": [
+        "# Final dataset with only the required comlumns and final datasets\n",
+        "\n",
+        "columns_final_dataset = columns_with_correlation_LR + [\"Class\"]\n",
+        "\n",
+        "train_df_final = cc_train_df [columns_final_dataset]\n",
+        "test_df_final = cc_test_df [columns_final_dataset]"
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_0ltXbah1Sw3"
+      },
+      "source": [
+        "# dataset saved with pickle in the google drive\n",
+        "\n",
+        "pickle.dump(train_df_final, open(\"/content/drive/My Drive/Colab Notebooks/train_df_final.pkl\", \"wb\"))\n",
+        "pickle.dump(test_df_final, open(\"/content/drive/My Drive/Colab Notebooks/test_df_final.pkl\", \"wb\"))\n",
+        "\n"
+      ],
+      "execution_count": 43,
+      "outputs": []
     }
   ]
 }
