Added some comments

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -73,6 +73,7 @@
         }
       },
       "source": [
+        "# Connecting the Google drive with Colab\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
@@ -98,7 +99,8 @@
         }
       },
       "source": [
-        "# Import of the train and test datasets into the Panda dataframe\n",
+        "# Import of the train and test datasets into the Panda dataframe from Google drive \n",
+        "# To load data from the local drive the location below can be changed accordingly\n",
         "\n",
         "cc_test_df = pd.read_csv(\"/content/drive/My Drive/Colab Notebooks/creditcard_test.csv\")\n",
         "cc_train_df = pd.read_csv(\"/content/drive/My Drive/Colab Notebooks/creditcard_train.csv\")\n",
