Imported the dataset

--- a/Fraud_Detection_Model.ipynb
+++ b/Fraud_Detection_Model.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Fraud Detection Model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM0Clch5uIWsRyzfml0aCUM"
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNiastmcZIBIiBSEOptnZzn"
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,15 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uWmomRRi3Onk"
+      },
+      "source": [
+        "## Import of the libraries"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -24,19 +34,401 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import missingno as msno\n",
         "from plotly.subplots import make_subplots\n",
         "import plotly.graph_objects as go\n",
         "import plotly.express as px\n",
-        "import statsmodels.formula.api as smf\n",
-        "import statsmodels.api as sm\n",
-        "import statsmodels.stats.api as sms\n",
         "from scipy import stats\n",
         "import seaborn as sns\n",
         "import pickle"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yEjs6k5s3Xg7"
+      },
+      "source": [
+        "## Import of the Dataset\n",
+        "\n",
+        "The data will be imported from a pickle file saved after the data analysis notebook"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "epYJFijk3Sik",
+        "outputId": "9e69885c-59c7-45e6-edf5-0411b1b8d624",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "# Connecting the Google drive with Colab\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VPCBjteh3LEK",
+        "outputId": "049b6022-cc78-404d-c312-5deaafe76f30",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 457
+        }
+      },
+      "source": [
+        "# Import of the train and test datasets into the Panda dataframe from Google drive \n",
+        "# To load data from the local drive the location below can be changed accordingly\n",
+        "\n",
+        "\n",
+        "train_df = pickle.load(open(\"/content/drive/My Drive/Colab Notebooks/train_df_final.pkl\", \"rb\"))\n",
+        "test_df = pickle.load(open(\"/content/drive/My Drive/Colab Notebooks/test_df_final.pkl\", \"rb\"))\n",
+        "\n",
+        "train_df\n",
+        "test_df"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>V1</th>\n",
+              "      <th>V4</th>\n",
+              "      <th>V5</th>\n",
+              "      <th>V7</th>\n",
+              "      <th>V8</th>\n",
+              "      <th>V9</th>\n",
+              "      <th>V10</th>\n",
+              "      <th>V13</th>\n",
+              "      <th>V14</th>\n",
+              "      <th>V16</th>\n",
+              "      <th>V20</th>\n",
+              "      <th>V21</th>\n",
+              "      <th>V22</th>\n",
+              "      <th>V24</th>\n",
+              "      <th>V27</th>\n",
+              "      <th>V28</th>\n",
+              "      <th>Amount</th>\n",
+              "      <th>Class</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Id</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0.584007</td>\n",
+              "      <td>0.001509</td>\n",
+              "      <td>0.292260</td>\n",
+              "      <td>1.120755</td>\n",
+              "      <td>-0.166826</td>\n",
+              "      <td>-0.501695</td>\n",
+              "      <td>-0.694423</td>\n",
+              "      <td>-0.276469</td>\n",
+              "      <td>0.284019</td>\n",
+              "      <td>0.265888</td>\n",
+              "      <td>-0.106804</td>\n",
+              "      <td>0.167209</td>\n",
+              "      <td>0.361133</td>\n",
+              "      <td>0.375231</td>\n",
+              "      <td>0.102098</td>\n",
+              "      <td>0.144502</td>\n",
+              "      <td>42.81</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.326714</td>\n",
+              "      <td>-0.979830</td>\n",
+              "      <td>-0.625116</td>\n",
+              "      <td>-0.636415</td>\n",
+              "      <td>0.050208</td>\n",
+              "      <td>-0.785860</td>\n",
+              "      <td>0.815473</td>\n",
+              "      <td>-1.025594</td>\n",
+              "      <td>0.271240</td>\n",
+              "      <td>1.751346</td>\n",
+              "      <td>0.164916</td>\n",
+              "      <td>0.109578</td>\n",
+              "      <td>-0.011447</td>\n",
+              "      <td>-0.859332</td>\n",
+              "      <td>-0.021529</td>\n",
+              "      <td>0.003230</td>\n",
+              "      <td>75.00</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2.097691</td>\n",
+              "      <td>-0.011746</td>\n",
+              "      <td>0.597501</td>\n",
+              "      <td>0.130716</td>\n",
+              "      <td>-0.174237</td>\n",
+              "      <td>0.383371</td>\n",
+              "      <td>0.171848</td>\n",
+              "      <td>0.344720</td>\n",
+              "      <td>0.589561</td>\n",
+              "      <td>0.230686</td>\n",
+              "      <td>-0.192933</td>\n",
+              "      <td>0.233496</td>\n",
+              "      <td>0.825427</td>\n",
+              "      <td>-1.115397</td>\n",
+              "      <td>-0.020643</td>\n",
+              "      <td>-0.079921</td>\n",
+              "      <td>2.29</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-1.593912</td>\n",
+              "      <td>-0.236255</td>\n",
+              "      <td>-0.002224</td>\n",
+              "      <td>-0.392776</td>\n",
+              "      <td>-2.005520</td>\n",
+              "      <td>-0.306309</td>\n",
+              "      <td>-0.253465</td>\n",
+              "      <td>1.539975</td>\n",
+              "      <td>-0.407657</td>\n",
+              "      <td>0.687552</td>\n",
+              "      <td>-0.258684</td>\n",
+              "      <td>1.995801</td>\n",
+              "      <td>-1.554302</td>\n",
+              "      <td>-0.531345</td>\n",
+              "      <td>0.346683</td>\n",
+              "      <td>0.104860</td>\n",
+              "      <td>8.99</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>1.863194</td>\n",
+              "      <td>3.853830</td>\n",
+              "      <td>0.220877</td>\n",
+              "      <td>-0.296455</td>\n",
+              "      <td>0.207090</td>\n",
+              "      <td>-0.487512</td>\n",
+              "      <td>1.454433</td>\n",
+              "      <td>-0.153871</td>\n",
+              "      <td>-0.147691</td>\n",
+              "      <td>0.606259</td>\n",
+              "      <td>-0.311545</td>\n",
+              "      <td>0.118870</td>\n",
+              "      <td>0.611417</td>\n",
+              "      <td>-0.387779</td>\n",
+              "      <td>-0.003506</td>\n",
+              "      <td>-0.061238</td>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>85439</th>\n",
+              "      <td>-0.753070</td>\n",
+              "      <td>-1.448546</td>\n",
+              "      <td>1.130943</td>\n",
+              "      <td>1.167232</td>\n",
+              "      <td>0.201294</td>\n",
+              "      <td>-0.245013</td>\n",
+              "      <td>0.113600</td>\n",
+              "      <td>-1.027914</td>\n",
+              "      <td>1.212622</td>\n",
+              "      <td>-0.053734</td>\n",
+              "      <td>0.050720</td>\n",
+              "      <td>0.202703</td>\n",
+              "      <td>0.725051</td>\n",
+              "      <td>-1.016408</td>\n",
+              "      <td>0.469657</td>\n",
+              "      <td>0.304103</td>\n",
+              "      <td>0.75</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>85440</th>\n",
+              "      <td>-0.539994</td>\n",
+              "      <td>0.514863</td>\n",
+              "      <td>-0.043655</td>\n",
+              "      <td>0.851781</td>\n",
+              "      <td>-0.059080</td>\n",
+              "      <td>0.319422</td>\n",
+              "      <td>-0.573884</td>\n",
+              "      <td>-1.541622</td>\n",
+              "      <td>-0.192496</td>\n",
+              "      <td>-0.702496</td>\n",
+              "      <td>-0.173193</td>\n",
+              "      <td>0.059047</td>\n",
+              "      <td>0.441880</td>\n",
+              "      <td>0.574042</td>\n",
+              "      <td>-0.007875</td>\n",
+              "      <td>-0.067811</td>\n",
+              "      <td>40.00</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>85441</th>\n",
+              "      <td>-1.833594</td>\n",
+              "      <td>-1.464593</td>\n",
+              "      <td>-0.448623</td>\n",
+              "      <td>-0.496368</td>\n",
+              "      <td>0.481275</td>\n",
+              "      <td>-1.151529</td>\n",
+              "      <td>-0.210526</td>\n",
+              "      <td>0.895314</td>\n",
+              "      <td>-0.274270</td>\n",
+              "      <td>1.832300</td>\n",
+              "      <td>0.754963</td>\n",
+              "      <td>0.363656</td>\n",
+              "      <td>0.279139</td>\n",
+              "      <td>-0.118669</td>\n",
+              "      <td>0.209083</td>\n",
+              "      <td>-0.049870</td>\n",
+              "      <td>140.00</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>85442</th>\n",
+              "      <td>1.373911</td>\n",
+              "      <td>1.057884</td>\n",
+              "      <td>-0.413288</td>\n",
+              "      <td>0.412863</td>\n",
+              "      <td>-0.382925</td>\n",
+              "      <td>0.640802</td>\n",
+              "      <td>-0.550427</td>\n",
+              "      <td>0.595095</td>\n",
+              "      <td>-1.184722</td>\n",
+              "      <td>0.375467</td>\n",
+              "      <td>0.537641</td>\n",
+              "      <td>0.470784</td>\n",
+              "      <td>0.868639</td>\n",
+              "      <td>0.059266</td>\n",
+              "      <td>-0.086933</td>\n",
+              "      <td>0.025684</td>\n",
+              "      <td>343.39</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>85443</th>\n",
+              "      <td>-1.683357</td>\n",
+              "      <td>-0.827478</td>\n",
+              "      <td>-0.431862</td>\n",
+              "      <td>-0.102517</td>\n",
+              "      <td>-0.114782</td>\n",
+              "      <td>0.349091</td>\n",
+              "      <td>-0.069912</td>\n",
+              "      <td>-1.516944</td>\n",
+              "      <td>0.405564</td>\n",
+              "      <td>0.224752</td>\n",
+              "      <td>-0.063979</td>\n",
+              "      <td>0.558429</td>\n",
+              "      <td>-0.712699</td>\n",
+              "      <td>-0.010307</td>\n",
+              "      <td>0.392933</td>\n",
+              "      <td>0.213428</td>\n",
+              "      <td>5.00</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>85443 rows × 18 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             V1        V4        V5  ...       V28  Amount  Class\n",
+              "Id                                   ...                         \n",
+              "1     -0.584007  0.001509  0.292260  ...  0.144502   42.81      0\n",
+              "2      1.326714 -0.979830 -0.625116  ...  0.003230   75.00      0\n",
+              "3      2.097691 -0.011746  0.597501  ... -0.079921    2.29      0\n",
+              "4     -1.593912 -0.236255 -0.002224  ...  0.104860    8.99      0\n",
+              "5      1.863194  3.853830  0.220877  ... -0.061238    0.00      0\n",
+              "...         ...       ...       ...  ...       ...     ...    ...\n",
+              "85439 -0.753070 -1.448546  1.130943  ...  0.304103    0.75      0\n",
+              "85440 -0.539994  0.514863 -0.043655  ... -0.067811   40.00      0\n",
+              "85441 -1.833594 -1.464593 -0.448623  ... -0.049870  140.00      0\n",
+              "85442  1.373911  1.057884 -0.413288  ...  0.025684  343.39      0\n",
+              "85443 -1.683357 -0.827478 -0.431862  ...  0.213428    5.00      0\n",
+              "\n",
+              "[85443 rows x 18 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     }
   ]
 }
