Started the oversampling technique

--- a/Fraud_Detection_Model.ipynb
+++ b/Fraud_Detection_Model.ipynb
@@ -6,7 +6,7 @@
       "name": "Fraud Detection Model.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPnjVQ/PU2Vr8ui4zd0/jph"
+      "authorship_tag": "ABX9TyOu6L/KQYCD0r36bqkFQcCB"
     },
     "kernelspec": {
       "name": "python3",
@@ -483,13 +483,28 @@
         "id": "Ob0M2T_R51W8"
       },
       "source": [
-        "## Unbalance Dataset Approach\n",
+        "## Unbalance Dataset Approaches\n",
         "\n",
-        "1. Create the model as it is with two different algorithms to see the performance with the data as it is\n",
+        "Reference:\n",
+        "1. https://machinelearningmastery.com/tactics-to-combat-imbalanced-classes-in-your-machine-learning-dataset/#:~:text=Imbalanced%20data%20typically%20refers%20to,with%20100%20instances%20(rows).\n",
         "\n",
-        "Will evaluate the models with MSE and F1 score\n",
+        "2. https://www.kaggle.com/janiobachmann/credit-fraud-dealing-with-imbalanced-datasets/notebook\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uY7EKEnZOhRg"
+      },
+      "source": [
+        "Approaches:\n",
         "\n",
-        "The model tested will be random forrest and SVC"
+        "1. Create the model with two different algorithms to see the performance with the data as it is\n",
+        "\n",
+        "  Will evaluate the models with MSE and F1 score\n",
+        "\n",
+        "  The model tested will be random forrest and SVC"
       ]
     },
     {
@@ -960,6 +975,45 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1KyLtQ9TOvO5"
+      },
+      "source": [
+        "The above models have got F1 validation score of about 80% with validation set\n",
+        "\n",
+        "The hyper parameters for both models have been manually tweaked to have best result as shown above"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cJLsyu7xPJ0M"
+      },
+      "source": [
+        "2. Oversampling the dataset using the Imbalance learn library\n",
+        "\n",
+        "Reference:\n",
+        "\n",
+        "https://github.com/scikit-learn-contrib/imbalanced-learn\n",
+        "\n",
+        "https://imbalanced-learn.org/stable/index.html\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TWeoWF3qOuMW"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
